Converted MA index to html, added links to parallels, and added parallel notes to many sutras that lacked them.

--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -73,7 +73,7 @@ next: MA_003.html
 ### Notes
 
 1. {:#n1} Parallels include [AN 7.69](https://suttacentral.net/an7.69){: target="_blank"}, [EA 39.2](https://suttacentral.net/ea39.2){: target="_blank"}, and [T28](https://suttacentral.net/T28){: target="_blank"}. [\[back\]](#ref1)
-2. *pārijāta*. {:#n2} The Chinese seems to be an abbreviated transliteration ‘jata,’ but presumably the full Sanskrit name would have been pārijāta(ka) (P. pāricchattaka). It’s a present-day name for *Nyctanthes arbor-tristis*, commonly called the night-flowering jasmine tree in English. The heavenly tree may have been imagined to resemble this South Asian tree, but it was described as being enormous in the Trāyastriṃśa Heaven, taking up the space of an entire grove. [\[back\]](#ref2)
+2. {:#n2}*pārijāta*. The Chinese seems to be an abbreviated transliteration ‘jata,’ but presumably the full Sanskrit name would have been pārijāta(ka) (P. pāricchattaka). It’s a present-day name for *Nyctanthes arbor-tristis*, commonly called the night-flowering jasmine tree in English. The heavenly tree may have been imagined to resemble this South Asian tree, but it was described as being enormous in the Trāyastriṃśa Heaven, taking up the space of an entire grove. [\[back\]](#ref2)
 3. {:#n3} *Trāyastriṃśa Heaven*. The Chinese translates trāyastriṃśa literally as Heaven of the Thirty-Three. This was the heaven of the Vedic gods ruled by Indra. [\[back\]](#ref3)
 4. {:#n4} The Pali parallel reads *Na cirass’eva dāni jālakajāto bhavissati*. Bhikkhu Bodhi reports that the Manorathapūraṇī commentary says: “The occasion when the tree gives birth to webs of leaves and flower, which come forth together.” The Chinese term can also be understood as “web,” describing the overall appearance of a budding tree. [\[back\]](#ref4)
 5. {:#n5} Pali: *Na cirass’eva dani kharakajato bhavissati*. Bhikkhu Bodhi translates the commentary as: “The occasion when it becomes possessed of a web of leaves and of flowers well divided and growing separately.” The Chinese literally means “bird's beak;” presumably, it refers to the shape of the buds as they develop. [\[back\]](#ref5)
