--- a/01_agama/madhyama/MA_017.md
+++ b/01_agama/madhyama/MA_017.md
@@ -10,7 +10,7 @@ next: MA_031.html
 ## Chapter 2: Related to Action
 ### 17. Gāminī
 
-1\. Thus I have heard: One time, the Buddha traveled to Nālandā and stayed at [Pāvārika]’s Mango Grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to Nālandā and stayed at [Pāvārika]’s Mango Grove.
 {: #p1}
 
 2\. It was then that there was a [young] Ābhāsvara god named Gāminī. His appearance was glorious, and he was radiant and glowing. At night just before dawn, he went to the Buddha, bowed his head at the Buddha’s feet, and then withdrew to stand at one side. That [young] Ābhāsvara god Gāminī then said, “Bhagavān, the priests are proud of themselves, serving one god or another. When the lives of sentient beings end, the priests can send them as they like to [440a] be reborn in good places, born up in the heavens. The Bhagavān is the Dharma lord. May the Bhagavān make sentient beings go to good places, born up in the heavens, when their lives end!”
@@ -74,6 +74,9 @@ Gāminī answered, “No, Bhagavān.”
 
 17\. The Buddha spoke thus. Gāminī and the monks who heard what the Buddha taught rejoiced and approved.
 {: #p17}
+
+### Notes
+1. {:#n1} The direct parallel for this sutra is [SN 42.6](https://suttacentral.net/sn42.6). This version differs mainly in having a different opening narrative, depicting a god approaching the Buddha with a question rather than the headman of a village. {: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
