--- a/01_agama/madhyama/MA_031.md
+++ b/01_agama/madhyama/MA_031.md
@@ -10,7 +10,7 @@ next: MA_042.html
 ## Chapter 3: Related to Śāriputra
 ### 31. Discernment of the Noble Truths
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “This is the correct practice of teaching Dharma, which is to gather in detail, contemplate in detail, discern, disclose, reveal, define, make known, and direct others to the four noble truths.
@@ -251,6 +251,9 @@ Of suffering, accumulation, cessation, and the path.”
 
 71\. This is what Venerable Śāriputra said. Those monks who heard what Venerable Śāriputra said rejoiced and approved.
 {:#p71}
+
+### Notes
+1. {:#n1} The direct parallel for this sutra is [MN 141](https://suttacentral.net/mn141). {: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
