--- a/01_agama/madhyama/MA_046.md
+++ b/01_agama/madhyama/MA_046.md
@@ -36,7 +36,7 @@ next: MA_047.html
 {: #p8}
 
 ### Notes
-1. {: #n1} Parallels include [AN 7.65](https://suttacentral.net/an7.65){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} Parallels include [AN 7.65](https://suttacentral.net/an7.65){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. This sutra has the tree metaphors found in AN 7.65, but it still expands the list as in AN 11.3. [\[Back\]](#ref1)
 
 ---
 
