--- a/01_agama/madhyama/MA_048.md
+++ b/01_agama/madhyama/MA_048.md
@@ -11,7 +11,7 @@ next: MA_049.html
 ## Chapter 5: Related to Cultivation
 ### 48. Precepts (2)
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 {: #p1}
 
 2\. It was then that Venerable Śāriputra addressed the monks, “Good men, if a monk violates the precepts, that’s detrimental to not having regrets, gladness, joy, calm, happiness, concentration, seeing as it really is and knowing as it truly is, disenchantment, lack of desire, and liberation. If he has no liberation, that’s detrimental to nirvāṇa.
@@ -34,6 +34,9 @@ next: MA_049.html
 
 8\. Venerable Śāriputra taught thus. Those monks who heard what the Venerable Śāriputra taught rejoiced and approved.
 {: #p8}
+
+### Notes
+1. {: #n1} This sutra is a concise version of [AN 11.4](https://suttacentral.net/an11.4){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
