--- a/01_agama/madhyama/MA_049.md
+++ b/01_agama/madhyama/MA_049.md
@@ -24,7 +24,7 @@ next: MA_050.html
 {: #p4}
 
 ### Notes
-1. {: #n1} Parallels include [AN 5.22](https://suttacentral.net/an5.22){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} The closest Pali parallel is [AN 5.22](https://suttacentral.net/an5.22){: target="_blank"}, but the list has additional steps. [\[Back\]](#ref1)
 
 ---
 
