--- a/01_agama/madhyama/MA_051.md
+++ b/01_agama/madhyama/MA_051.md
@@ -127,7 +127,7 @@ They answered, “Good people are its cultivation.”
 {: #p25}
 
 ### Notes
-1. {: #n1} Parallels include [AN 10.62](https://suttacentral.net/an10.62){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} The closest Pali parallels is [AN 10.62](https://suttacentral.net/an10.62){: target="_blank"}, but this version lacks the metaphor of rain. [\[Back\]](#ref1)
 
 ---
 
