--- a/01_agama/madhyama/MA_098.md
+++ b/01_agama/madhyama/MA_098.md
@@ -11,7 +11,7 @@ next: MA_146.html
 ## Chapter 9: Cause
 ### 98. The Abodes of Mindfulness
 
-1\. Thus I have heard: One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasadharma].
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasadharma].
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “There’s one path that purifies sentient beings. It frees them from sorrow and fear, ceases suffering and vexation, ends lamentation, and attains the right Dharma. It’s called the four abodes of mindfulness.
@@ -185,6 +185,9 @@ next: MA_146.html
 
 55\. The Buddha spoke thus. Those monks who heard what the Buddha taught rejoiced and approved.
 {:#p55}
+
+### Notes
+1. {: #n1} Direct Pali parallels are [MN 10](https://suttacentral.net/mn10){: target="_blank"} and [DN 22](https://suttacentral.net/dn22){: target="_blank"}. Note also the overlap with [MN 119](https://suttacentral.net/mn119){: target="_blank"} regarding the similes related to the four P. *jhāna*s. [\[Back\]](#ref1)
 
 ---
 
