--- a/01_agama/madhyama/MA_045.md
+++ b/01_agama/madhyama/MA_045.md
@@ -24,7 +24,7 @@ next: MA_046.html
 {: #p4}
 
 ### Notes
-1. {: #n1} Parallels include [AN 7.65](https://suttacentral.net/an7.65){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. [\[Back\]](#ref1)
+1. {: #n1} Parallels include [AN 7.65](https://suttacentral.net/an7.65){: target="_blank"} and [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. This sutra is similar to AN 7.65 because it's point of departure is conscience and modesty, but it uses the larger list from AN 11.1 and lacks the tree metaphors. [\[Back\]](#ref1)
 
 ---
 
