--- a/01_agama/madhyama/MA_047.md
+++ b/01_agama/madhyama/MA_047.md
@@ -11,7 +11,7 @@ next: MA_048.html
 ## Chapter 5: Related to Cultivation
 ### 47. Precepts
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 {: #p1}
 
 2\. It was then that the Bhagavān addressed the monks, “If a monk violates the precepts, that’s detrimental to not having regrets, gladness, joy, calm, happiness, concentration, seeing as it really is and knowing as it truly is, disenchantment, lack of desire, and liberation. If he has no liberation, that’s detrimental to nirvāṇa.
@@ -22,6 +22,9 @@ next: MA_048.html
 
 4\. The Buddha spoke thus. [486c] Those monks who heard what the Buddha taught rejoiced and approved.
 {: #p4}
+
+### Notes
+1. {: #n1} This sutra is a concise version of [AN 11.3](https://suttacentral.net/an11.3){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
