--- a/01_agama/madhyama/MA_050.md
+++ b/01_agama/madhyama/MA_050.md
@@ -11,7 +11,7 @@ next: MA_051.html
 ## Chapter 5: Related to Cultivation
 ### 50. Veneration (2)
 
-1\. Thus I have heard: One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the country of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.
 {: #p1}
 
 2\. It was then that the Bhagavān addressed the monks, “A monk should practice respect, well observe, pay homage to those of the religious practice. Suppose a monk hasn’t practiced respect, well observed, or paid homage to those of the religious practice. There’s no way he’ll be endowed with deportment. Not being endowed with deportment, there’s no way he’ll be endowed with learning. Not being endowed with learning, he won’t be endowed with guarding his faculties … guarding the precepts … not having regrets … gladness … joy … calm … happiness … concentration … seeing as it really is and knowing as it truly is … disenchantment … lack of desire … liberation. Not being endowed with liberation, there’s no way he’ll be endowed with nirvāṇa.
@@ -22,6 +22,9 @@ next: MA_051.html
 
 4\. The Buddha spoke thus. Those monks who had heard [487b] what the Buddha taught rejoiced and approved.
 {: #p4}
+
+### Notes
+1. {: #n1} A close Pali parallel is [AN 5.22](https://suttacentral.net/an5.22){: target="_blank"}, but it has the full list from [AN 11.1-4](https://suttacentral.net/an11.1){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
