--- a/01_agama/madhyama/MA_082.md
+++ b/01_agama/madhyama/MA_082.md
@@ -11,7 +11,7 @@ next: MA_098.html
 ## Chapter 7: King Dīrghāyu
 ### 82. Crickets
 
-1\. Thus have I heard: One time, the Buddha traveled to the city of Rājagṛha and stayed at [Kalandaka] Park in Veḷuvana Grove.
+1\. Thus have I heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to the city of Rājagṛha and stayed at [Kalandaka] Park in Veḷuvana Grove.
 {:#p1}
 
 2\. It was then that a group of many monks had gathered in the meeting hall after the midday meal. They wanted to settle an argument about this teaching and discipline that was taught by the Buddha. At the time, the monk Citra [Hastisāriputra] was present in the assembly. When that monk Citra [Hastisāriputra] discussed this teaching and discipline that was taught by the Buddha, he wrangled with the others around him, and what he had to say didn’t help the monks teaching Dharma to bring an end to it. Nor did he ask questions of the senior and elder monks with respect or good observation.
@@ -100,6 +100,9 @@ The friends answered, “No. Why is that? After a night has passed and the sun r
 
 26\. Venerable Mahākauṣṭhila spoke thus. Those monks who heard what Venerable Mahākauṣṭhila taught rejoiced and approved.
 {:#p26}
+
+### Notes
+1. {: #n1} The closest Pali parallel is [AN 6.60](https://suttacentral.net/an6.60){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
