--- a/01_agama/madhyama/MA_186.md
+++ b/01_agama/madhyama/MA_186.md
@@ -11,7 +11,7 @@ next: MA_200.html
 ## Chapter 15: Pairs
 ### 186. Inquiry
 
-1\. Thus I have heard: One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasadharma].
+1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to Kuru and stayed at the Kuru town of [Karmasadharma].
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Someone who doesn’t know other minds as they truly are isn’t able to know the Bhagavān’s right and complete enlightenment. How should they inquire about the Tathāgata?”
@@ -74,6 +74,9 @@ The monks then accepted the teaching and listened.
 
 20\. The Buddha spoke thus. The monks who heard what the Buddha taught rejoiced and approved.
 {:#p20}
+
+### Notes
+1. {: #n1} The direct Pali parallels is [MN 47](https://suttacentral.net/mn47){: target="_blank"}. [\[Back\]](#ref1)
 
 ---
 
