Fixed many embarrassing cross-linking issues in EA.

--- a/01_agama/ekottarika/02/EA_02_01.md
+++ b/01_agama/ekottarika/02/EA_02_01.md
@@ -24,7 +24,7 @@ next: EA_02_02.html
 {: #p4}
 
 ### Notes
-1. {:#n1} Parallels include [AN 1.296](https://suttacentral.net/an1.296-305/en/sujato){: target="_blank"} and [MA 98](../02_madhyama/02_Lesser_Lands_and_Cities/09_Cause/MA_098.html){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} Parallels include [AN 1.296](https://suttacentral.net/an1.296-305/en/sujato){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
