--- a/01_agama/ekottarika/12/EA_12_01.md
+++ b/01_agama/ekottarika/12/EA_12_01.md
@@ -121,7 +121,7 @@ next: ../19/EA_19_01.html
 {: #p33}
 
 ### Notes
-1. {:#n1} Parallels include [MN 10](https://suttacentral.net/mn10){: target="_blank"} and [MA 98](../02_madhyama/02_Lesser_Lands_and_Cities/09_Cause/MA_098.html){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} Parallels include [MN 10](https://suttacentral.net/mn10){: target="_blank"} and [MA 98](../../madhyama/MA_098.html){: target="_blank"}. [\[back\]](#ref1)
 2. {:#n2} *vomit, diarrhea*. The Chinese indicates two items, 生熟二藏, or 生藏 and 熟藏. These terms appear to be literal translations of āma-aśaya and pakva-aśaya, which mean “raw organ” and “ripened organ,” which are Indian idioms for the stomach and colon. Given the context here, in a list of bodily fluids and contents, this would seem to refer to the contents of the stomach and the large intestine. [\[back\]](#ref2)
 3. {:#n3} *from food*. The Pali parallel has the term sāmisa for this and nirāmisa as the negation “not from food” in the next paragraph. It’s interesting to note that in Pali sāmisa can have the sense of “meat in food.” Skt. āmiṣa can simply refer to food, and this is how the Chinese translator interpreted it. [\[back\]](#ref3)
 
