--- a/01_agama/ekottarika/19/EA_19_01.md
+++ b/01_agama/ekottarika/19/EA_19_01.md
@@ -44,7 +44,7 @@ I’ll ascend to the hall and reveal the Dharma eye.”
 {:#p8}
 
 ### Notes
-1. {:#n1} This sūtra is parallel with [SN 6.1](https://suttacentral.net/sn6.1/en/sujato). [\[back\]](#ref1)
+1. {:#n1} This sūtra is parallel with [SN 6.1](https://suttacentral.net/sn6.1/en/sujato){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
