--- a/01_agama/ekottarika/19/EA_19_02.md
+++ b/01_agama/ekottarika/19/EA_19_02.md
@@ -29,7 +29,7 @@ next: ../24/EA_24_5.html
 {: #p6}
 
 ### Notes
-1. {:#n1} Partial parallels include [SN 56.11](https://suttacentral.net/sn56.11){: target="_blank"} and [T109](https://suttacentral.net/t109){: target="_blank"}. This sutra includes only the material regarding the eightfold path being a middle way between two extreme types of religious practice. [\[back\]](#ref1)
+1. {:#n1} Partial parallels include [SN 56.11](https://suttacentral.net/sn56.11){: target="_blank"} and [T109](../../other/T109.html){: target="_blank"}. This sutra includes only the material regarding the eightfold path being a middle way between two extreme types of religious practice. [\[back\]](#ref1)
 
 ---
 
