--- a/01_agama/ekottarika/24/EA_24_5.md
+++ b/01_agama/ekottarika/24/EA_24_5.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | 24. The Tall Flag | 5. Miraculous Transformat
 type: kramdown
 base: ../../../
 previous: ../19/EA_19_02.html
-next: ../27/EA_24_6.html
+next: EA_24_6.html
 ---
 
 # [The Numerical Discourses](../index.html)
@@ -742,7 +742,7 @@ The Bhagavān told him, “So it is, [624b] great king. As the great king says, 
 {:#p161}
 
 ### Notes
-1. {:#n1} Partial parallels include [MN 26](https://suttacentral.net/nn26){: target="_blank"}, [SN 56.11](https://suttacentral.net/sn56.11){: target="_blank"}, and [Khandhaka 1](https://suttacentral.net/t109){: target="_blank"} of the Theravāda Vinaya. [\[back\]](#ref1)
+1. {:#n1} Partial parallels include [MN 26](https://suttacentral.net/mn26){: target="_blank"}, [SN 56.11](https://suttacentral.net/sn56.11){: target="_blank"}, and [Khandhaka 1](https://suttacentral.net/pli-tv-kd1/en/brahmali){: target="_blank"} of the Theravāda Vinaya. [\[back\]](#ref1)
 
 ---
 
