--- a/01_agama/ekottarika/27/EA_27_06.md
+++ b/01_agama/ekottarika/27/EA_27_06.md
@@ -36,7 +36,7 @@ next: ../31/EA_31_08.html
 {: #p8}
 
 ### Notes
-1. {:#n1} Parallels include [MN 12](https://suttacentral.net/mn12){: target="_blank"}, [AN 4.8](https://suttacentral.net/an4.8){: target="_blank"}, and T757. [\[back\]](#ref1)
+1. {:#n1} Parallels include [MN 12](https://suttacentral.net/mn12){: target="_blank"}, [AN 4.8](https://suttacentral.net/an4.8){: target="_blank"}, and [T757](../../../09_other_sutras/T757.html){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
