--- a/01_agama/ekottarika/31/EA_31_08.md
+++ b/01_agama/ekottarika/31/EA_31_08.md
@@ -142,7 +142,7 @@ That is my vow.”
 {:#p41}
 
 ### Notes
-1. {:#n1} This sutra is roughly parallel with the austerities section of [MN 12](https://suttacentral.net/mn12){: target="_blank"} and T757. [\[back\]](#ref1)
+1. {:#n1} This sutra is roughly parallel with the austerities section of [MN 12](https://suttacentral.net/mn12){: target="_blank"} and [T757](../../../09_other_sutras/T757.html){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
