--- a/01_agama/ekottarika/43/EA_43_5.md
+++ b/01_agama/ekottarika/43/EA_43_5.md
@@ -166,7 +166,7 @@ And now they will destroy your army.’
 {: #p38}
 
 ### Notes
-1. {:#n1} Parallels include [MN 22](https://suttacentral.net/mn22){: target="_blank"}, [MĀ 204](../02_madhyama/05_Last/17_Potalaka/MA_204.html){: target="_blank"}, [SN 35.238](https://suttacentral.net/sn35.238){: target="_blank"}, and [Snp 3.2](https://suttacentral.net/snp3.2){: target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} Parallels include [MN 22](https://suttacentral.net/mn22){: target="_blank"}, [MĀ 204](../../madhyama/MA_204.html){: target="_blank"}, [SN 35.238](https://suttacentral.net/sn35.238){: target="_blank"}, and [Snp 3.2](https://suttacentral.net/snp3.2){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
