--- a/01_agama/ekottarika/46/EA_46_04.md
+++ b/01_agama/ekottarika/46/EA_46_04.md
@@ -76,7 +76,7 @@ next: ../50/EA_50_06.html
 {: #p19}
 
 ### Notes
-1. {:#n1} Parallels include [MN 12](https://suttacentral.net/mn12){: target="_blank"}, [AN 6.64](https://suttacentral.net/an6.64){: target="_blank"}, [AN 10.21](https://suttacentral.net/an10.21){: target="_blank"}, [SĀ 11.41](../../samyukta/11/SA11_41.html), T757, T780, and T781. [\[back\]](#ref1)
+1. {:#n1} Parallels include [MN 12](https://suttacentral.net/mn12){: target="_blank"}, [AN 6.64](https://suttacentral.net/an6.64){: target="_blank"}, [AN 10.21](https://suttacentral.net/an10.21){: target="_blank"}, [SĀ 11.41](../../samyukta/11/SA11_41.html){: target="_blank"}, [T757](../../../09_other_sutras/T757.html){: target="_blank"}, [T780](../../../09_other_sutras/T780.html){: target="_blank"}, and [T781](../../../09_other_sutras/T781.html){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
