--- a/01_agama/ekottarika/50/EA_50_8.md
+++ b/01_agama/ekottarika/50/EA_50_8.md
@@ -91,7 +91,7 @@ The monks replied, “Indeed, Bhagavān. We have not heard the Tathāgata teach 
 {:#p21}
 
 ### Notes
-1. {:#n1} Parallels include [MN 21](https://suttacentral.net/mn21){: target="_blank"}, [MN 22](https://suttacentral.net/mn22){: target="_blank"}, MĀ 193, and MĀ 200. [\[back\]](#ref1)
+1. {:#n1} Parallels include [MN 21](https://suttacentral.net/mn21){: target="_blank"}, [MN 22](https://suttacentral.net/mn22){: target="_blank"}, MĀ 193, and [MĀ 200](../../madhyama/MA_200.html){: target="_blank"}. [\[back\]](#ref1)
 
 ---
 
