Fixed links and other minor typos.

--- a/01_agama/madhyama/MA_006.md
+++ b/01_agama/madhyama/MA_006.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "The Medium Discourses | Chapter 1: Sevens | 6. The Good Person's Departure"
+title: "The Medium Discourses | Chapter 1: Sevens | 6. The Good Person’s Departure"
 type: kramdown
 base: ../../../
 previous: MA_005.html
