--- a/01_agama/madhyama/MA_009.md
+++ b/01_agama/madhyama/MA_009.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Medium Discourses | Chapter 1: Sevens | 10. Ending the Contaminants'
+title: 'The Medium Discourses | Chapter 1: Sevens | 9. Seven Chariots'
 type: kramdown
 base: ../../../
 previous: MA_008.html
