--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -10,114 +10,141 @@ next: MA_017.html
 ## Chapter 2: Related to Action
 ### 16. The Kālāmas
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of Kālāma accompanied by a great assembly of monks. He went to [Kesaputta] and stayed in the rosewood grove to the north.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha traveled to the country of the Kālāmas accompanied by a large assembly of monks. He went to the town *Keśaputra and stayed in a rosewood grove north of it. [\[2\]](#n2){:#ref2}
 {:#p1}
 
-2\. It was then that the Kālāma people of [Kesaputta] heard that the ascetic Gautama from the Śākya clan had renounced the Śākya dynasty, left home, and trained on the path. He had traveled to Kālāma and arrived at [Kesaputta] with a great assembly of monks and was staying in the rosewood grove to the north. That ascetic Gautama had a great reputation that was widely heard in ten directions: “The ascetic Gautama is the Tathāgata, Arhat, and Fully Awakened One who’s accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and called the Buddha, the Blessed One. Among the gods, Māra, Brahmā, ascetics, and priests of this world, from humans up to the gods, his own knowledge and awakening was accomplished by self-realization. When he teaches the Dharma, it’s good in the beginning, middle, and end, both its meaning and words are complete and pure, and it demonstrates the religious practice. If someone meets the Tathāgata, Arhat, and Fully Awakened One and honors, venerates, makes offerings, and serves him, they will quickly attain good benefits. We should go together to see the ascetic Gautama to honor, serve, and make offerings to him.”
+### The Doubt of the Kālāmas
+
+2\. It was then that the Kālāma people of \*Keśaputra heard: “The ascetic Gautama from the Śākya clan renounced the Śākya dynasty, left home, and trained on the path. He has traveled to the country of the Kālāmas and arrived at \*Keśaputra with a great assembly of monks. They are staying in the rosewood grove north of the town.
 {:#p2}
 
-3\. After the Kālāma people of [Kesaputta] heard this, they each left [Kesaputta] with their followers and went north to the rosewood grove. They wanted to meet the Bhagavān and venerate, serve, and make offerings to him. When they arrived, some of those Kālāma people bowed their heads at the Buddha’s feet and withdrew to sit at one side. Some of them exchanged greetings with the Buddha and withdrew to sit at one side. Some saluted the Buddha with their palms together and withdrew to sit at one side. Some looked at the Buddha from a distance and quietly sat down.
+3\. “The ascetic Gautama has a great reputation that’s widely heard in the ten directions: ‘The ascetic Gautama is a Tathāgata, Arhat, and Fully Awakened One who is accomplished in knowledge and conduct, well gone, an understander of the world, an unsurpassed man, a trainer in the principles of the path, a teacher to gods and humans, and called the Buddha, the Blessed One. Among the gods Māra and Brahmā and the ascetics and priests of this world, from humans up to the gods, his own knowledge and awakening was self-realized and fully accomplished. When he teaches the Dharma, it’s good in the beginning, middle, and end, both its meaning and words are complete and pure, and it demonstrates the religious practice. If someone meets the Tathāgata, Arhat, and Fully Awakened One and honors, venerates, makes offerings, and serves him, they will quickly attain good benefits.’”
 {:#p3}
 
-4\. After they each had sat down, the Kālāma people concentrated as the Buddha taught the Dharma. He encouraged, roused, and made them rejoice, teaching the Dharma for them with measureless methods. After he encouraged, roused, and made them rejoice, he waited silently.
+4\. “We should go together to see the ascetic Gautama to venerate and make offerings to him.”
 {:#p4}
 
-5\. After the Buddha taught Dharma for them and had encouraged, roused, and made them rejoice, each of the Kālāma people rose from their seat, adjusted their robes to bare one shoulder, and saluted the Buddha with their palms together. They then said to the Bhagavān, “Gautama, there was an ascetic or priest who came to Kālāma. He simply praised his own knowledge and views and disparaged the knowledge and views of others. Gautama, there was another ascetic or priest who came to Kālāma, and he too praised his own knowledge and views and disparaged the knowledge and views of others. Gautama, after listening to them, we had this doubt, ‘Which of these ascetics or priests is genuine and which of them is false?’”
+5\. After hearing this, Kālāma people of *Keśaputra left town with their peers and attendants, following each other as they went north to the rosewood grove. They wanted to see the Bhagavān and venerate and make offerings to him. When they arrived, some of those Kālāmas bowed their heads at the Buddha’s feet and withdrew to sit at one side. Some of them exchanged greetings with the Buddha and withdrew to sit at one side. Some saluted the Buddha with their palms together and withdrew to sit at one side. Some looked at the Buddha from a distance and quietly sat down.
 {:#p5}
 
-6\. The Bhagavān told them, “Kālāmas, don’t have this doubt. Why is that? As a result of having doubt, you’ll become hesitant. Kālāmas, it come from your own lack of pure knowledge. ‘Is there an afterlife or no afterlife?’ Kālāmas, you also lack pure knowledge about which actions are blameworthy and which are blameless. Kālāmas, you should know that there are three actions that have caused past existences. What are the three?
+6\. After they each had sat down, the Kālāma people settled as the Buddha taught the Dharma. He encouraged, roused, and made them rejoice, teaching the Dharma for them with measureless methods. After he encouraged, roused, and made them rejoice, he waited quietly.
 {:#p6}
 
-7\. “Kālāmas, actions of greed have caused past existences. Kālāmas, actions of anger and delusion have caused past existences. Kālāmas, ‘greed’ means to be hindered by greed. When the mind lacks satisfaction, sometimes a person kills beings, takes what’s not given, commits sexual misconduct, knowingly lies, and drinks alcohol.
+7\. After the Buddha taught Dharma for them and had encouraged, roused, and made them rejoice, each of the Kālāmas rose from their seat, adjusted their robes to bare one shoulder, and saluted the Buddha with their palms together. They then said to the Bhagavān, “Gautama, there was an ascetic or priest who visited us Kālāmas. He just praised his own knowledge and vision and disparaged the knowledge and vision of others. Gautama, there was another ascetic or priest who visited us Kālāmas, and he praised his own knowledge and vision and disparaged the knowledge and vision of others, too. Gautama, after listening to them, we had this doubt, ‘Which of these ascetics or priests is genuine, and which of them is a fraud?’”
 {:#p7}
 
-8\. “Kālāmas, ‘anger’ means to be hindered by anger. When the mind lacks satisfaction, sometimes a person kills beings, takes what’s not given, commits sexual misconduct, knowingly lies, and drinks alcohol.
+8\. The Bhagavān told them, “Kālāmas, don’t have this doubt. Why is that? As a result of having doubt, you’ll become hesitant. Kālāmas, it comes from your lack of pure knowledge: ‘Is there an afterlife or no afterlife?’ Kālāmas, you also lack pure knowledge about which actions are blameworthy and which are blameless. Kālāmas, you should know that actions have three pre-existing causes.[\[3\]](#n3){:#ref3} What are the three?
 {:#p8}
 
-9\. “Kālāmas, ‘delusion’ means to be hindered by delusion. When the mind lacks satisfaction, sometimes a person kills beings, takes what’s not given, commits sexual misconduct, knowingly lies, and drinks alcohol.
+9\. “Kālāmas, greed is a pre-existing cause of actions. Kālāmas, anger and delusion are pre-existing causes of actions. Kālāmas, ‘greedy’ means to be hindered by greed. When the mind is dissatisfied, a person sometimes kills beings, takes what’s not given, commits sexual misconduct, knowingly lies, and drinks alcohol.
 {:#p9}
 
-10\. “Kālāmas, the well-versed noble disciple parts with killing, stops killing, and discards blades and bludgeons. With conscience and modesty and with kindness and compassion, they are beneficial to all living things, even insects and worms. They purify their mind and rid it of killing living things.
+10\. “Kālāmas, ‘angry’ means to be hindered by anger. When the mind is dissatisfied, a person sometimes kills beings, takes what’s not given, commits sexual misconduct, knowingly lies, and drinks alcohol.
 {:#p10}
 
-11\. “Kālāmas, the well-versed noble disciple parts with taking what’s not given, stops taking what’s not given, and takes after something is given. They are happy with taking what is given and always like generosity. Rejoicing in having no stinginess, they don’t expect any reward. They purify their mind and rid it of taking what’s not given.
+11\. “Kālāmas, ‘deluded’ means to be hindered by delusion. When the mind is dissatisfied, a person sometimes kills beings, takes what’s not given, commits sexual misconduct, knowingly lies, and drinks alcohol.
 {:#p11}
 
-12\. “Kālāmas, the well-versed noble disciple parts with what’s not the religious life, stops what’s not the religious life, and diligently cultivates the religious life. Diligent is their wondrous conduct. They are pure and undefiled, parting with desire and stopping lust. They purify their mind and rid it of what’s not the religious life.
+### Ten Good Deeds
+
+12\. “Kālāmas, the well-versed noble disciple parts with killing, stops killing, and discards weapons. With conscience, modesty, and compassion, they are beneficial to all living things, even insects and worms. They purify their mind and rid it of killing living things.
 {:#p12}
 
-13\. “Kālāmas, the well-versed noble disciple parts with false speech, stops false speech, and speaks truly. They enjoy truth, abide in truth, and don’t budge from it. They are believed by all and don’t deceive the world. They purify their mind and rid it of false speech.
+13\. “Kālāmas, the well-versed noble disciple parts with taking what’s not given, stops taking what’s not given, and only takes what is given. They are happy with taking what is given and always like generosity. Rejoicing in having no stinginess, they don’t expect any reward. They purify their mind and rid it of taking what’s not given.
 {:#p13}
 
-14\. “Kālāmas, the well-versed noble disciple parts with duplicity, stops duplicity, and practices what’s not duplicitous. They don’t divide others. They don’t hear something here and tell it there with the desire to divide those here. They don’t hear something there and tell it here with the desire to divide those there. They want to bring the estranged together, and they rejoice for those who are united. They don’t act partisan, don’t enjoy partisanship, and don’t commend partisanship. They purify their mind and rid it of duplicity.
+14\. “Kālāmas, the well-versed noble disciple parts with what’s not the celibate life, stops what’s not the celibate life, and diligently cultivates the celibate life. Diligent is their wondrous conduct. They are pure and undefiled, parting with desire and stopping lust. They purify their mind and rid it of what’s not the celibate life.
 {:#p14}
 
-15\. “Kālāmas, the well-versed noble disciple parts with coarse speech and stops coarse speech. If something said is in expression or feeling coarse and mean, bad sounding and disagreeable to the ear, that displeases many and isn’t loved by many, that causes others to suffer, or that makes concentration impossible, they stop such words. If some expression is clear, peaceful, and flexible, that agrees with the ear and enters the mind, that’s pleasing and lovely, that causes the well-being of others, that uses words and sounds that are completely understandable, that doesn’t cause people to be frightened, and that allows others to concentrate, then they speak such words. They purify their mind and rid it of coarse speech.
+15\. “Kālāmas, the well-versed noble disciple parts with false speech, stops false speech, and speaks truly. They enjoy truth, abide in truth, and don’t budge from it. They are believed by all and don’t deceive the world. They purify their mind and rid it of false speech.
 {:#p15}
 
-16\. “Kālāmas, the well-versed noble disciple parts with fancy speech and stops fancy speech. [They speak] timely speech, true speech, Dharma speech, purposeful speech, and calming speech. They enjoy calming speech, perform tasks in a timely way as appropriate, and they well teach and well admonish [others]. They purify their mind and rid it of fancy speech.
+16\. “Kālāmas, the well-versed noble disciple parts with divisiveness, stops divisiveness, and practices what’s not divisive. They don’t damage others. They don’t hear something here and tell it there with the desire to damage people here. They don’t hear something there and tell it here with the desire to damage people there. They want to bring the estranged together, and they rejoice for those who are united. They don’t act partisan, don’t enjoy partisanship, and don’t commend partisanship. They purify their mind and rid it of divisiveness.
 {:#p16}
 
-17\. “Kālāmas, the well-versed noble disciple is free of longing and stops longing. They don’t harbor quarrels in their mind. Seeing the valuables of others and their requisites for living, they don’t long for or wish to obtain them for themselves. They purify their mind and rid it of longing.
+17\. “Kālāmas, the well-versed noble disciple parts with coarse speech and stops coarse speech. If what’s said is coarse and mean in expression or feeling, bad sounding, disagreeable to the ear, displeases many, isn’t loved by many, causes others to suffer, or makes concentration impossible, they stop such speech. If an expression is clear, peaceful, flexible, agrees with the ear, enters the mind, is pleasing and lovely, causes the well-being of others, uses words and sounds that are completely understandable, doesn’t frighten people, and allows others to concentrate, then they speak such words. They purify their mind and rid it of coarse speech.
 {:#p17}
 
-18\. “Kālāmas, the well-versed noble disciple is free of anger and stops anger. With conscience and modesty and with kindness and compassion, they’re beneficial to all living things, even insects and worms. They purify their mind and rid it of animosity.
+18\. “Kālāmas, the well-versed noble disciple parts with fancy speech and stops fancy speech. Their speech is timely, true, Dharma, purposeful, and calming. They enjoy calming speech, perform tasks in a timely way as appropriate, and they well teach and admonish others. They purify their mind and rid it of fancy speech.
 {:#p18}
 
-19\. “Kālāmas, the well-versed noble disciple is free of wrong view and stops wrong view. They conduct themselves in right view and aren’t mistaken. Thus viewing and thus speaking, [they say]: ‘There’s generosity, purification, and incantations. There’s the results of good and bad actions. There’s the present world and another world. There’s father and mother. The world truly has people who depart and go to good places, good departures, and good headings. In this world and another world, their own knowledge and awakening is accomplished by self-realization.’ They purify their mind and rid it of wrong views.
+19\. “Kālāmas, the well-versed noble disciple is free of longing and stops longing. They don’t harbor disputes in their mind. Seeing the valuables and requisites for living of others, they don’t long for or wish to obtain them for themselves. They purify their mind and rid it of longing.
 {:#p19}
 
-20\. “Thus, Kālāmas, the well-versed noble disciple achieves pure physical conduct and achieves pure verbal and mental conduct. They’re free of anger, free of dispute, and they abandon drowsiness. Without agitation or arrogance, they end doubt and free themselves from conceit. With right mindfulness and right knowledge, they have no delusions.
+20\. “Kālāmas, the well-versed noble disciple is free of hatred and stops hatred. With conscience, modesty, and compassion, they’re beneficial to all living things, even insects and worms. They purify their mind and rid it of hatred.
 {:#p20}
 
-21\. “They pervade one direction with their mind together with kindness. They do so in two, three, and four directions, the four counterpoints, and up and down. They completely pervade them all with their mind together with kindness without bondage, without enmity, without anger, and without quarrel. It’s broadly, greatly, and measurelessly well cultivated, and they accomplish the filling of the whole world. Thus, their mind together with compassion, joy, and equanimity is without bondage, without enmity, without anger, and without quarrel. It’s broadly, greatly, and measurelessly well cultivated, and they accomplish the filling of the whole world.
+21\. “Kālāmas, the well-versed noble disciple is free of wrong view and stops wrong view. They conduct themselves in right view and aren’t mistaken. Such is their view, and such is their speech: ‘There’s generosity, purification, and incantations. There’s the results of good and bad actions. There’s the present world and another world. There’s father and mother. The world truly has people who depart and go to good places, good departures, and good headings. In this world and another world, their own knowledge and awakening is self-realized and fully accomplished.’ They purify their mind and rid it of wrong views.
 {:#p21}
 
-22\. “Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. They readily attain four peaceful dwelling places. What are the four? ‘There’s the present world and another world, and there are the results of good and bad actions. I’ve attained this right view associated with actions, upholding and perfecting it. When my body breaks up and my life ends, I’ll surely go to a good place and be born up in the heavens.’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called attaining the first peaceful dwelling place.
+### The Four Immeasurables
+
+22\. “Thus, Kālāmas, the well-versed noble disciple achieves pure physical conduct and achieves pure verbal and mental conduct. They’re free of anger, free of dispute, and they get rid of drowsiness. Without agitation or arrogance, they end doubt and free themselves from pride. With right mindfulness and right knowledge, they have no delusions.
 {:#p22}
 
-23\. “Furthermore, Kālāmas: ‘“There’s no present world or another world and no results of good and bad actions.” I don’t criticize others for such [views] here in the present. I simply praise those of right knowledge. Those who make effort and those of right view say those [things] exist.’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called attaining the second peaceful dwelling place.
+23\. “Their mind fully pervades one direction with kindness. They do this in two, three, and four directions, the four counterpoints, up, and down. Their mind completely pervades them all with kindness. They are without bondage, enmity, anger, or dispute. Broadly, greatly, and measurelessly well cultivated, they fully pervade the whole world.
 {:#p23}
 
-24\. “Furthermore, Kālāmas: ‘If I do anything, I mustn’t do evil; I won’t think of evil. Why is that? Where will suffering come from if I don’t do evil?’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called the third peaceful dwelling place.
+24/. “Thus it is with compassion, joy, and equanimity. They are without bondage, without enmity, without anger, and without dispute. Broadly, greatly, and measurelessly well cultivated, they fully pervade the whole world.
 {:#p24}
 
-25\. “Furthermore, Kālāmas: ‘If I do anything, I mustn’t do evil. I won’t transgress worldly fears and non-fears. I’ll always have compassion for the whole world. My thoughts won’t be to fight with sentient beings. They’ll be unsullied and joyous.’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called the fourth peaceful dwelling place.
+### The Four Peaceful Dwellings
+
+25\. “Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. They readily attain four peaceful dwellings. What are the four?
 {:#p25}
 
-26\. “Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. These are called the four peaceful dwelling places.
+26\. “‘“There’s the present world and another world, and there are the results of good and bad actions.” I’ve attained this right view associated with actions, upholding and perfecting it. When my body breaks up and my life ends, I’ll surely go to a good place, being born in the heavens.’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. This is called attaining the first peaceful dwelling.
 {:#p26}
 
-27\. The Kālāmas said to the Bhagavān, “Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel and attains four peaceful dwelling places. What are the four? ‘There’s the present world and another world, and there are the results of good and bad actions. I’ve attained this right view associated with actions, upholding and perfecting it. When my body breaks up and my life ends, I’ll surely go to a good place and be born up in the heavens.’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called attaining the first peaceful dwelling place.
+27\. “Furthermore, Kālāmas: ‘“There’s no present world or another world and no results of good and bad actions.” I don’t criticize others for such views here in the present. I just praise those of right knowledge. Those who make effort and those of right view say those things exist.’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. This is called attaining the second peaceful dwelling.
 {:#p27}
 
-28\. “Furthermore, Gautama: ‘“There’s no present world or another world and no results of good and bad actions.” I don’t criticize others for such [views] here in the present. I simply praise those of right knowledge. Those who make effort and those of right view say those [things] exist.’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called attaining the second peaceful dwelling place.
+28\. “Furthermore, Kālāmas: ‘If I do anything, I mustn’t do evil. I won’t think of evil. Why is that? How will suffering arise if I don’t do evil?’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. This is called the third peaceful dwelling.
 {:#p28}
 
-29\. “Furthermore, Gautama: ‘If I do anything, I mustn’t do evil; I won’t think of evil. Why is that? Where will suffering come from if I don’t do evil?’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called the third peaceful dwelling place.
+29\. “Furthermore, Kālāmas: ‘If I do anything, I mustn’t do evil. I won’t transgress what the world fears and doesn’t fear. I’ll always have compassion for the whole world. My thoughts won’t be to fight with sentient beings. They’ll be unsullied and joyous.’ Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. This is called the fourth peaceful dwelling.
 {:#p29}
 
-30\. “Furthermore, Gautama: ‘If I do anything, I mustn’t do evil. I won’t transgress worldly fears and non-fears. I’ll always have compassion for the whole world. My thoughts won’t be to fight with sentient beings. They’ll be unsullied and joyous.’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. This is called the fourth peaceful dwelling place.
+30\. “Thus, Kālāmas, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. These are called the four peaceful dwellings.”
 {:#p30}
 
-31\. “Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without quarrel. These are called the four peaceful dwelling places.
+### Conclusion
+
+31\. The Kālāmas said to the Bhagavān, “Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute and attains four peaceful dwellings. What are the four?
 {:#p31}
 
-32\. “Gautama, we’ve realized it, Sugata; we’ve understood it, Bhagavān. We all take our refuge in the Buddha, Dharma, and the community of monks. Please let the Bhagavān accept us as laymen. Starting today, these [three jewels] will be our personal refuge for the rest of our lives.”
+32\. “‘“There’s the present world and another world, and there are the results of good and bad actions.” I’ve attained this right view associated with actions, upholding and perfecting it. When my body breaks up and my life ends, I’ll surely go to a good place, being born in the heavens.’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. This is called attaining the first peaceful dwelling.
 {:#p32}
 
-33\. The Buddha spoke thus. All the Kālāma people and the monks who heard what the Buddha taught rejoiced and approved.
+33\. “Furthermore, Gautama: ‘“There’s no present world or another world and no results of good and bad actions.” I don’t criticize others for such views here in the present. I just praise those of right knowledge. Those who make effort and those of right view say those things exist.’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. This is called attaining the second peaceful dwelling.
+{:#p33}
+
+34\. “Furthermore, Gautama: ‘If I do anything, I mustn’t do evil. I won’t think of evil. Why is that? How will suffering arise if I don’t do evil?’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. This is called the third peaceful dwelling.
+{:#p34}
+
+35\. “Furthermore, Gautama: ‘If I do anything, I mustn’t do evil. I won’t transgress what the world fears and doesn’t fear. I’ll always have compassion for the whole world. My thoughts won’t be to fight with sentient beings. They’ll be unsullied and joyous.’ Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. This is called the fourth peaceful dwelling.
+{:#p35}
+
+36\. “Thus, Gautama, the well-versed noble disciple’s mind is without bondage, without enmity, without anger, and without dispute. These are called the four peaceful dwellings.
+{:#p36}
+
+37\. “Gautama, we’ve realized it. Sugata, we’ve understood it. Bhagavān, we all take refuge in the Buddha, Dharma, and the Saṅgha of monks. Please let the Bhagavān accept us as laymen. Starting today, they will be our refuge for the rest of our lives.”
+{:#p37}
+
+33\. Thus did the Buddha speak. All the Kālāmas and the monks who heard what the Buddha taught rejoiced and approved.
 {:#p33}
 
 ### Notes
 
 1. {:#n1} The direct parallel for this sutra is [AN 3.65](https://suttacentral.net/an3.65){: target="_blank"}. [\[back\]](#ref1)
-
+2. {:#n2}*country of the Kālāmas*. Ch 伽藍, MCh k’ie-lam, P/Skt Kālāma. The Taisho reads 園 (“park”), which seems a copyist error. I’ve adopted the alternate reading of 國 (“country”). \\
+*\*Keśaputra*. Ch. 羇舍子, MCh. kɪĕ-ʃɪă-putra, P. Kesamutta. The Chinese is a partial transliteration (子 typically translates P. putta, Skt. putra). I’ve not located a Skt. attestation for this place name, so I’ve tentatively reconstructed it given typical Chinese transliterations. [\[back\]](#ref2)
+3. {:#n3}*causes that are pre-existent*. Ch. 因習本有. I suspect that 因習 translates a verb equivalent to P. uppajjati (“to arise, come into being”), which is found in the parallel passage. 本有 usually means “inherent existence,” but here with the functional meaning of “pre-existing.” The verb 因習 is apparently a particle adjective, making the expression awkward, but I believe it basically means “pre-existing cause.”
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 15 November 2020
+Last Revised: 14 October 2021
 {: .revised}
 
 ---
