--- a/01_agama/dirgha/DA_17.md
+++ b/01_agama/dirgha/DA_17.md
@@ -80,7 +80,7 @@ next: DA_18.html
 20\. “Cunda, a teacher leaves the world long after he left home, and his fame has become far-reaching. All his disciples receive his instruction and the complete religious practice. They reach a state of peace, obtain their own reward, and accept, discern, and promulgate his teaching. When different interpretations arise, they can eliminate them according to the teaching. They perfect transforming themselves and realize miraculous abilities. This is a factor of the religious practice being fulfilled.
 {:#p20}
 
-21\. “Cunda, a teacher leaves the world long after he left home, and his fame has become far-reaching, but his nuns have yet to receive his instructions. They’ve yet to reach a state of peace, obtain their own reward, or accept, discern, and promulgate his teaching. When different interpretations arise, they can’t eliminate them with the teaching. They’ve still can’t transform themselves or realize miraculous abilities, either. This is a factor of the religious life being incomplete.
+21\. “Cunda, a teacher leaves the world long after he left home, and his fame has become far-reaching, but his nuns have yet to receive his instructions. They’ve yet to reach a state of peace, obtain their own reward, or accept, discern, and promulgate his teaching. When different interpretations arise, they can’t eliminate them with the teaching. They still can’t transform themselves or realize miraculous abilities, either. This is a factor of the religious life being incomplete.
 {:#p21}
 
 22\. “Cunda, a teacher leaves the world long after he left home, and his fame has become far-reaching. All his nuns receive his instruction and the complete religious practice. They reach a state of peace, obtain their own reward, and accept, discern, and promulgate his teaching. When different interpretations arise, they can eliminate them according to the teaching. They perfect transforming themselves and realize miraculous abilities. This is a factor of the religious practice being completely fulfilled.
@@ -192,7 +192,7 @@ next: DA_18.html
 55\. The Buddha said, “Some wanderers of other religions come and say, ‘The ascetic Śākyans themselves enjoy many pleasures.’
 {:#p55}
 
-56\. “When they say this, you should thus reply, ‘You shouldn’t say that the ascetic Śākyans themselves enjoy many pleasures. Why is that? When someone enjoys pleasures, the Tathāgata rebukes them. When someone enjoy pleasures, the Tathāgata commends them.’
+56\. “When they say this, you should thus reply, ‘You shouldn’t say that the ascetic Śākyans themselves enjoy many pleasures. Why is that? When someone enjoys pleasures, the Tathāgata rebukes them. When someone enjoys pleasures, the Tathāgata commends them.’
 {:#p56}
 
 57\. “Suppose that wanderer from another religion asks, ‘The enjoyment of which pleasures does Gautama rebuke?’
@@ -221,7 +221,7 @@ next: DA_18.html
 64\. “‘Good men, the five desires are conditions that give rise to pleasure and must be quickly eliminated. Even though some people enjoy killing sentient beings, such pleasure should be quickly eliminated. Even though some people enjoy stealing, such pleasure should be quickly eliminated. Even though some people enjoy violating the religious life, such pleasure should be quickly eliminated. Even though some people enjoy making false statements, such pleasure should be quickly eliminated. Even though some people are unrestrained and self-indulgent, such pleasure should be quickly eliminated. Even though some people enjoy practicing the ascetic practices of other religions, such pleasure should be quickly eliminated.
 {:#p64}
 
-65\. “‘Some people seclude themselves from desire and aren’t subject to any more evil things. With perception and contemplation, seclusion give rise to joy and happiness, and they enter the first dhyāna. Such pleasure is commended by the Buddha.
+65\. “‘Some people seclude themselves from desire and aren’t subject to any more evil things. With perception and contemplation, seclusion gives rise to joy and happiness, and they enter the first dhyāna. Such pleasure is commended by the Buddha.
 {:#p65}
 
 66\. “‘Some people cease their perception and contemplation. With inner joy, unified mind, and no perception or contemplation, samādhi gives rise to joy and happiness, and they enter the second dhyāna. Such pleasure is commended by the Buddha.
@@ -258,7 +258,7 @@ next: DA_18.html
 75\. “Some wanderers of other religions make the statement, ‘The ascetic Śākyans have an unsteady teaching.’
 {:#p75}
 
-76\. “You should respond to them, ‘Good men, don’t say that the ascetic Śākyans have a teaching that’s unsteady. Why is that? The teaching of ascetic Śākyans always steady and immovable. It’s like a gate’s threshold that always steady and unmoved.[\[4\]](#n4){:#ref4} The ascetic Śākyans are likewise. Their teaching is always steady without any movement.’
+76\. “You should respond to them, ‘Good men, don’t say that the ascetic Śākyans have a teaching that’s unsteady. Why is that? The teaching of ascetic Śākyans is always steady and immovable. It’s like a gate’s threshold that’s always steady and unmoved.[\[4\]](#n4){:#ref4} The ascetic Śākyans are likewise. Their teaching is always steady without any movement.’
 {:#p76}
 
 #### The Buddha’s Knowledge of the Future
