--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -124,7 +124,7 @@ next: MA_002.html
 2. {:#n2} This is the traditional list of 12 types of sūtras found in Indian Buddhist sources. Deciphering the precise order of this list is a challenge because Saṃghadeva translates all but one item (gāthā), and it varies in other sources. Using the traditional Skt interpretations of itivṛttaka, vyākaraṇa, and udāna as the primary clues, I arrive at this list: sūtra, geya, vyākaraṇa, gāthā, nidāna, itivṛttaka, avadāna, udāna, jātaka, vaipulya, adbhuta-dharma, and upadeśa. [\[back\]](#ref2)
 3. {:#n3} This passage is cryptic. A parallel passage in Xuanzang’s translation of the *Saṃgītiparyāya Abhidharma* (T1536.437b24-26) reads: “this is a time he should cultivate calm appearances … active appearances … indifferent appearances.” This seems to refer to a monk’s social manner or daily activities. [\[back\]](#ref3)
 4. {:#n4} *Relieving himself*. The Chinese expression is a euphemism for defecating and urinating. [\[back\]](#ref4)
-5. {:#n5} *warriors … priests … householders … ascetics*. Skt. kṣatriya, brahmana, gṛhapati, and śramaṇa. The warriors were in later eras the nobility of India, being the heads of government. Householders were well-to-do and influential people due to wealth, but they weren’t part of the nobility or priesthood. Ascetics were spiritual practitioners and leaders who had left secular life and taken vows of poverty. [\[back\]](#ref5)
+5. {:#n5} *warriors … priests … householders … ascetics*. Skt. kṣatriya, brāhmaṇa, gṛhapati, and śramaṇa. The warriors were in later eras the nobility of India, being the heads of government. Householders were well-to-do and influential people due to wealth, but they weren’t part of the nobility or priesthood. Ascetics were spiritual practitioners and leaders who had left secular life and taken vows of poverty. [\[back\]](#ref5)
 
 ---
 
