--- a/01_agama/dirgha/DA_22.md
+++ b/01_agama/dirgha/DA_22.md
@@ -4,7 +4,7 @@ title: The Long Discourses | 22. Śroṇatāṇḍya
 type: kramdown
 base: ../../
 previous: DA_21.html
-next: DA_24.html
+next: DA_23.html
 ---
 
 # [The Long Discourses](index.html)
@@ -259,7 +259,7 @@ He responded, “Very well! I’d be glad to hear it.”
 
 ### Notes
 
-1. {:#n1} The direct parallel for this sutra is [DN 4](https://suttacentral.net/dn4). [\[back\]](#ref1)
+1. {:#n1} The direct parallel for this sutra is [DN 4](https://suttacentral.net/dn4){: target="_blank"}. [\[back\]](#ref1)
 2. {:n2} *Śroṇatāṇḍya*. This is a Sanskrit attestation equivalent to P. Soṇadaṇḍa that’s found in a Sarvâstivāda parallel to this sutra. The Chinese text translates his name as “Planting Virtue” (種德).[\[back\]](#ref2)
 3. {:n3} *three Vedas*. The Chinese literally reads “the three-division hymns of the other training” (異學三部諷誦), which seems to be a roundabout description of the three Vedas of the Brahmanical tradition. [\[back\]](#ref3)
 4. {:n4} *Arhat*. This term is often translated in different ways in Chinese when it occurs in this standard expression. Here it’s translated as “reached what’s real” or perhaps simply “fully realized” (至真). [\[back\]](#ref4)
