--- a/01_agama/dirgha/DA_10.md
+++ b/01_agama/dirgha/DA_10.md
@@ -25,7 +25,7 @@ The monks accepted his instructions and listened.
 5\. Śāriputra told the monks, “There are teachings that go up to ten which remove the manifold bonds, reach Nirvāṇa, and completely end suffering.[\[3\]](#n3){:#ref3} They also perfect 550 things. Now, I will discern them. All of you, listen well!
 {:#p5}
 
-####The Ones
+#### The Ones
 
 6\. “Monks, there’s one thing to be achieved, one thing to be cultivated, one thing to be recognized, one thing to be ceased, one thing that retreats, one thing that advances, one thing that’s difficult to understand, one thing to produce, one thing to know, and one thing to be realized.
 {:#p6}
@@ -33,7 +33,7 @@ The monks accepted his instructions and listened.
 7\. “What’s one thing to be achieved? Not being careless about good qualities. What’s one thing to be cultivated? Constant mindfulness of oneself.[\[4\]](#n4){:#ref4} What’s one thing to be recognized? Contaminated contact. What’s one thing to be ceased? The conceit of self. What’s one thing that retreats? Not contemplating the foul discharges. What’s one thing that advances? Contemplation of the foul discharges.[\[5\]](#n5){:#ref5} What’s one thing that’s difficult to understand? Uninterrupted samādhi. What’s one thing to know? Sentient beings look to food for their subsistence. What’s one thing to be realized? The freedom of an unobstructed mind.
 {:#p7}
 
-####The Twos
+#### The Twos
 
 8\. “Monks, there are two things to be achieved, two things to be cultivated, two things to be recognized, two things to be ceased, two things that retreat, two things that advance, two things that are difficult to understand, two things to produce, two things to know, and two things to be realized.
 {:#p8}
@@ -41,7 +41,7 @@ The monks accepted his instructions and listened.
 9\. “What are two things to be achieved? Knowing conscience and knowing modesty. What are two things to be cultivated? Calm and contemplation. What are two things to be recognized? Name and form. What are two things to be ceased? Ignorance and craving. What are two things that retreat? Violating precepts and breaking with [right] view. What are two things that advance? Being complete in precepts and complete in view. What are two things that are hard to understand? The causes and conditions for sentient beings to be defiled and the causes and conditions for sentient beings to be purified. What are two things to produce? Knowledge of ending [the contaminants] and knowledge of no birth. What are two things to know? What’s possible and what’s impossible. What are two things to be realized? Insight and liberation.
 {:#p9}
 
-####The Threes
+#### The Threes
 
 10\. “There are also three things to be achieved, three things to be cultivated, three things to be recognized, three things to be ceased, three things that retreat, three things that advance, three things that are hard to understand, three things to produce, three things to know, and three things to be realized.
 {:#p10}
@@ -79,7 +79,7 @@ The monks accepted his instructions and listened.
 21\. “Monks, these thirty things are true and not false. They’ve been known by the Tathāgata who teaches the Dharma equally.
 {:#p21}
 
-####The Fours
+#### The Fours
 
 22\. “There are also four things to be achieved, four things to be cultivated, four things to be recognized, four things to be ceased, four things that retreat, four things that advance, four things that are difficult to understand, four things to produce, four things to know, and four things to be realized.
 {:#p22}
@@ -87,7 +87,7 @@ The monks accepted his instructions and listened.
 23\. “What are four things to be achieved? The four wheels: Living in a central country,[\[6\]](#n6){:#ref6} being close to good friends, guarding oneself, and having planted roots of goodness in the past.
 {:#p23}
 
-24\. “What are four things to be cultivated? The four abodes of mindfulness: 1) A monk observes internal body as body, diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow. He observes external body as body, diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow. He observes internal and external body as body, diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow. He likewise observes 2) feelings, 3) mind, and 4) teachings.
+24\. “What are four things to be cultivated? The four abodes of mindfulness: 1) A monk observes internal body as body, diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow. He observes external body as body, diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow. He observes internal and external body as body, diligently and not negligently. He doesn’t lose that recollection and abandons worldly greed and sorrow. *He likewise observes 2) feelings, 3) mind, and 4) teachings.*
 {:#p24}
 
 25\. “What are four things to be recognized? The four foods: Physical food, food of contact, food of thought, and food of consciousness.
@@ -117,7 +117,7 @@ The monks accepted his instructions and listened.
 33\. “Monks, these forty things are true and not false. They’ve been known by the Tathāgata who teaches Dharma equally.
 {:#p33}
 
-####The Fives
+#### The Fives
 
 34\. “There are also five things to be achieved, five things to be cultivated, five things to be recognized, five things to be ceased, five things that retreat, five things that advance, five things that are difficult to understand, five things to produce, five things to know, and five things to be realized.
 {:#p34}
@@ -149,7 +149,7 @@ The monks accepted his instructions and listened.
 43\. “What are five things to produce? The noble person’s five knowledges regarding samādhi: The internal and external knowledge that arises from the present and future happiness of cultivating samādhi. The internal and external knowledge that arises from the noble person’s lack of craving. The internal and external knowledge that arises from the practices cultivated by Buddhas and noble people. The internal and external knowledge that arises from the state of tranquility while alone and without a companion. The internal and external knowledge that arises from entering and emerging from samādhi with a unified mind.
 {:#p43}
 
-44\. “What are five things to know? The five spheres of escape: 1) A monk doesn’t enjoy, give attention to, or befriend desires. He’s only mindful of escaping them, enjoys being far from them. He befriends non-negligence and disciplines his mind. Escaping and being free of desires, the arising of contaminants caused by those desires are also entirely abandoned and ceased, and he becomes liberated. This is the escape from desire. (2) The escape from anger, (3) escape from jealousy, (4) escape from form, and (5) escape from belief in the individual are likewise.
+44\. “What are five things to know? The five spheres of escape: 1) A monk doesn’t enjoy, give attention to, or befriend desires. He’s only mindful of escaping them, enjoys being far from them. He befriends non-negligence and disciplines his mind. Escaping and being free of desires, the arising of contaminants caused by those desires are also entirely abandoned and ceased, and he becomes liberated. This is the escape from desire. *(2) The escape from anger, (3) escape from jealousy, (4) escape from form, and (5) escape from belief in the individual are likewise.*
 {:#p44}
 
 45\. “What are five things to be realized? The five collections of the adept: The adept’s collection of precepts, collection of samādhi, collection of wisdom, collection of liberation, and collection of knowing and seeing liberation.
@@ -158,7 +158,7 @@ The monks accepted his instructions and listened.
 46\. “These fifty things are true and not false. They’ve been known by the Tathāgata who teaches Dharma equally.
 {:#p46}
 
-####The Sixes
+#### The Sixes
 
 47\. “There are also six things to be achieved, six things to be cultivated, six things to be recognized, six things to be ceased, six things that retreat, six things that advance, six things that are difficult to understand, six things to know, and six things to be realized.
 {:#p47}
@@ -202,7 +202,7 @@ The monks accepted his instructions and listened.
 60\. “What are six things to know? The six spheres of escape: 1) Suppose a monk says, ‘I’d cultivate kindness, but it generates anger.’ Another monk says, ‘You shouldn’t say that. Don’t slander the Tathāgata. The Tathāgata doesn’t say, ‘Cultivating the liberation of kindness will generate more anger.’ That’s impossible. The Buddha says, “Once anger is gone, one attains kindness afterward.”’
 {:#p60}
 
-61\. “2) Suppose a monk says, ‘I’d practice the liberation of compassion, but it generates hateful thoughts’ … 3) ‘I’d practice the liberation of joy, but it generates sorrowful thoughts’ … 4) ‘I’d practice the liberation of detachment, but it generates thoughts of like and dislike’ … 5) ‘I’d practice selflessness, but it generates suspicious thoughts’ … 6) ‘I’d practice having no perception, but it generates a multitude of confused perceptions.’ Those cases are likewise.
+61\. “2) Suppose a monk says, ‘I’d practice the liberation of compassion, but it generates hateful thoughts’ … 3) ‘I’d practice the liberation of joy, but it generates sorrowful thoughts’ … 4) ‘I’d practice the liberation of detachment, but it generates thoughts of like and dislike’ … 5) ‘I’d practice selflessness, but it generates suspicious thoughts’ … 6) ‘I’d practice having no perception, but it generates a multitude of confused perceptions.’ *Those cases are likewise.*
 {:#p61}
 
 62\. “What are six things to be realized? The six spiritual penetrations: Realization of miraculous abilities, realization of the heavenly ear, realization of knowing others’ minds, realization of perceiving past lives, realization of the heavenly eye, and realization of perceiving the end of the contaminants.
@@ -211,7 +211,7 @@ The monks accepted his instructions and listened.
 63\. “These sixty things, monks, are true and not false. They’ve been known by the Tathāgata who teaches Dharma equally.
 {:#p63}
 
-####The Sevens
+#### The Sevens
 
 64\. “There are also seven things to be achieved, seven things to be cultivated, seven things to be recognized, seven things to be ceased, seven things that retreat, seven things that advance, seven things that are difficult to understand, seven things to produce, seven things to know, and seven things to be realized.
 {:#p64}
@@ -249,7 +249,7 @@ The monks accepted his instructions and listened.
 75\. “Monks, these seventy things are true and not false. They’ve been known by the Tathāgata, who teaches Dharma equally.
 {:#p75}
 
-####The Eights
+#### The Eights
 
 76\. “There are also eight things to be achieved, eight things to be cultivated, eight things to be recognized, eight things to be ceased, eight things that retreat, eight things that advance, eight things that are difficult to understand, eight things to produce, eight things to know, and eight things to be realized.
 {:#p76}
@@ -386,7 +386,7 @@ The monks accepted his instructions and listened.
 120\. “Monks, these eighty things are true and not false. They’ve been known by the Tathāgata, who teaches Dharma equally.
 {:#p120}
 
-####The Nines
+#### The Nines
 
 121\. “There are also nine things to be achieved, nine things to be cultivated, nine things to be recognized, nine things to be ceased, nine things that retreat, nine things that advance, nine things that are difficult to understand, nine things to produce, nine things to know, and nine things to be realized.
 {:#p121}
